added in-line comments

--- a/DQN_projects/[Final_Training]_Deep_Reinforcement_Learning_via_Neural_Network_Agents.ipynb
+++ b/DQN_projects/[Final_Training]_Deep_Reinforcement_Learning_via_Neural_Network_Agents.ipynb
@@ -25,7 +25,10 @@
         "id": "AtUvlSMpqHc-"
       },
       "source": [
-        "## Imports and Installs"
+        "## Imports and Installs\n",
+        "Initially our team tried to use the AgileRL library to implement the deep Q-Learning agent and training loop. However, after initial testing in Gymnasium's CliffWalking env (our agileRL_DQN-Gym-CliffWalking notebook) - we found that AgileRL's main benefit (applying flexible training strategies that leverage colab's GPU) had some drawbacks. Mostly, we found that most Gymnasium environments do use array data structures within their actions or observations - a requirement to use agileRL's classes. We had to wrap the environment and AgileRL's DQN and test loops.\n",
+        "\n",
+        " Furthermore, we found that aside from that, AgileRL's GPU training feature was not functional. We used the reinforcement learning reference book](http://www.incompleteideas.net/book/RLbook2020.pdf) for this problem linked by the gymnasium developers, as well as example boilerplate code provided by Professor Jahan Ghofraniha of our CMPE260 course at San Jose State University."
       ]
     },
     {
@@ -66,7 +69,22 @@
         "id": "lum8T1EmWGpY"
       },
       "source": [
-        "## **DQN Agent with Replay Memory Implementation**"
+        "## **DQN Agent with Replay Memory Implementation**\n",
+        "\n",
+        "### What is the difference in training with a DQN agent vs a Q-Learning agent?\n",
+        "\n",
+        "#### Memory and Replay buffer\n",
+        "A difference in training an agent with a memory or replay buffer is that the simpler agent.update(state, action, reward, next_state, done) function is decomposed into multiple functions:\n",
+        "\n",
+        "1. memory.save_to_memory_vect_envs(state, action, reward, next_state, done)\n",
+        "2. experience = memory.sample(agent.batch_size)\n",
+        "3. agent.learn(experience)\n",
+        "\n",
+        "This allows for a higher dimensional input used for training (for example with multiple channels or multiple observations).\n",
+        "\n",
+        "#### Training steps\n",
+        "\n",
+        "The training steps when using a memory or replay buffer is dependent on the 'batch_size' of the memory. This determines how many 'experiences' / memory samples (or steps in the environment) the memory should be filled with prior to training. Once the memory is filled (this could be taken as the exploration phase as no learning is taking place), the agent continues taking steps while also learning (the training phase)."
       ]
     },
     {
@@ -121,6 +139,16 @@
         "print(\"Available Actions:\", env.action_space)\n",
         "print(\"Observation Space:\", env.observation_space)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### The BlackjackDQN Class\n",
+        "The neural network architecture within our BlackjackDQN is simple and only contains 3 feed-forward layers. Given the discrete actions and observations we did not expect many layers were needed. After training, we found we could improve our models performance, and this architecture could be altered to increase the width and depth of the network."
+      ],
+      "metadata": {
+        "id": "jqRPYVXp3M3s"
+      }
     },
     {
       "cell_type": "code",
@@ -179,6 +207,17 @@
         "output = model(sample_state)\n",
         "print(f\"Network output for sample state: {output}\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### The ReplayMemory Class\n",
+        "\n",
+        "This is our ReplayMemory implementation which is a simple deque that captures individual observations from the environment. This is used to save experiences during the exploration phase (when the model is making actions at random) to save for later use during training."
+      ],
+      "metadata": {
+        "id": "dtsN9tt437yH"
+      }
     },
     {
       "cell_type": "code",
@@ -273,6 +312,16 @@
         "print(f\"Next State: {next_states}\")\n",
         "print(f\"Done: {dones}\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### The ImprovedDQNAgent Class\n",
+        "This class is in effect the final model we implemented as an improvement over our initial BlackjackDQN class. This model is deeper and wider and also has additional features related to reinforcement learning concepts. We split the model into two network's (i.e one that learns the policy/q-matrix 'the policy net', and another that learns the actions without reference to the states 'the target net') and this is used to implement off-policy training."
+      ],
+      "metadata": {
+        "id": "j4fePcjD4Unq"
+      }
     },
     {
       "cell_type": "code",
@@ -475,7 +524,7 @@
       },
       "source": [
         "## Visualizing the Training of the Agent over 500,000 Episodes using a Plot of Rewards, Loss, and Epsilon\n",
-        "A decay rate of 0.99997 allows for more exploration up to ~100,000 episodes before reaching the minimum epsilon value. Training will occur for the rest of the 400,000 episodes. 500,000 episodes was shown to be a benchmark value to capture the optimal q-matrix strategy according to [the reinforcement learning reference book](http://www.incompleteideas.net/book/RLbook2020.pdf) for this problem linked by the gymnasium developers."
+        "A decay rate of 0.99997 allows for more exploration up to ~100,000 episodes before reaching the minimum epsilon value. Training will occur for the rest of the 400,000 episodes. 500,000 episodes was shown to be a benchmark value to capture the optimal q-matrix strategy according to the reinforcement learning reference book."
       ]
     },
     {
